solving flow type issues

--- a/src/index.scss
+++ b/src/index.scss
@@ -28,7 +28,7 @@ img {
   top: 6px;
   left: 14px;
   height: 52px;
-  background: url('/images/arkad-blue.svg');
+  background: url('./assets/images/arkad-blue.svg');
   background-size: contain;
   background-repeat: no-repeat;
   margin: 0 28px 0 0;
